--- a/fe/blind-tooth-fe/package.json
+++ b/fe/blind-tooth-fe/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-community/netinfo": "^11.3.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.11",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
+    "expo-network": "~5.8.0",
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
