--- a/fe/blind-tooth-fe/app.json
+++ b/fe/blind-tooth-fe/app.json
@@ -36,8 +36,7 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      "react-native-ble-plx"
+      "expo-router"
     ],
     "experiments": {
       "typedRoutes": true
