--- a/fe/blind-tooth-fe/package.json
+++ b/fe/blind-tooth-fe/package.json
@@ -21,6 +21,7 @@
     "expo-linking": "~6.2.2",
     "expo-network": "~5.8.0",
     "expo-router": "~3.4.8",
+    "expo-sensors": "~12.9.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
@@ -30,10 +31,10 @@
     "react-native": "0.73.4",
     "react-native-ble-manager": "^11.3.2",
     "react-native-ble-plx": "^3.1.2",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6",
-    "expo-sensors": "~12.9.1"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
