--- a/fe/blind-tooth-fe/package.json
+++ b/fe/blind-tooth-fe/package.json
@@ -30,9 +30,11 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-ble-manager": "^11.3.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.1.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
