--- a/fe/blind-tooth-fe/package.json
+++ b/fe/blind-tooth-fe/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-community/netinfo": "^11.3.1",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.6.7",
     "expo": "~50.0.11",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
@@ -31,6 +32,7 @@
     "react-native": "0.73.4",
     "react-native-ble-manager": "^11.3.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
