--- a/fe/blind-tooth-fe/package.json
+++ b/fe/blind-tooth-fe/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/netinfo": "^11.3.1",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.7",
@@ -37,8 +38,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^15.1.0",
-    "react-native-web": "~0.19.6",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
