--- a/fe/blind-tooth-fe/package.json
+++ b/fe/blind-tooth-fe/package.json
@@ -19,8 +19,11 @@
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.7",
     "expo": "~50.0.11",
+    "expo-asset": "^9.0.2",
+    "expo-av": "^13.10.5",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
+    "expo-location": "~16.5.5",
     "expo-network": "~5.8.0",
     "expo-router": "~3.4.8",
     "expo-sensors": "~12.9.1",
@@ -38,8 +41,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^15.1.0",
-    "react-native-web": "~0.19.6",
-    "expo-location": "~16.5.5"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
